manifest.yaml
---
# Source: app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-golang-app
  labels:
    helm.sh/chart: app-0.0.1
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: sample-golang
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: sample-golang
---
# Source: app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-golang-app
  labels:
    helm.sh/chart: app-0.0.1
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: sample-golang
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: sample-golang
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: sample-golang
    spec:
      imagePullSecrets:
        - name: tekton-harbor-regcred
      serviceAccountName: sample-golang-app
      securityContext:
        {}
      containers:
        - name: app
          securityContext:
            {}
          image: "registry.demo.ertia.cloud/demo/app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status
              port: http
          readinessProbe:
            httpGet:
              path: /status
              port: http
          resources:
            {}          
---
# Source: app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-golang-app
  labels:
    helm.sh/chart: app-0.0.1
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: sample-golang
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - "app.demo.ertia.cloud"
      secretName: app-tls
  rules:
    - host: "app.demo.ertia.cloud"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-golang-app
                port:
                  number: 3000
---
# Source: app/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "sample-golang-app-test-connection"
  labels:
    helm.sh/chart: app-0.0.1
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: sample-golang
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['sample-golang-app:3000']
  restartPolicy: Never
